Add constants, adjust pathing equations, cut extraneous code.

--- a/src/Pong_Clone.ipynb
+++ b/src/Pong_Clone.ipynb
@@ -119,7 +119,7 @@
    "outputs": [],
    "source": [
     "#Determines Paddle Movements Inside Window\n",
-    "def paddleMovement(tappedKey, pa, gM):   \n",
+    "def paddleMovement(pSP, tappedKey, pa, gM, tB, bB):   \n",
     "    #Paddle A Movements\n",
     "    if (pa == False): #Prevents paddle movement when the game is paused\n",
     "        if (tappedKey == 'w' or tappedKey == 's' or tappedKey == 'a' or tappedKey == 'd'):\n",
@@ -128,9 +128,9 @@
     "            if (tappedKey == 'w' or tappedKey == 's'): #Up & Down\n",
     "                yCorPA = paddleA.ycor()\n",
     "\n",
-    "                if (tappedKey == 'w' and yCorPA < 250):\n",
+    "                if (tappedKey == 'w' and yCorPA < (tB - 50)):\n",
     "                    yCorPA += 50\n",
-    "                if (tappedKey == 's' and yCorPA > -250):\n",
+    "                if (tappedKey == 's' and yCorPA > (bB + 50)):\n",
     "                    yCorPA -= 50\n",
     "\n",
     "                paddleA.sety(yCorPA)\n",
@@ -139,7 +139,7 @@
     "                if (tappedKey == 'a' or tappedKey == 'd'): #Left & Right\n",
     "                    xCorPA = paddleA.xcor()\n",
     "\n",
-    "                    if (tappedKey == 'a' and xCorPA > -350):\n",
+    "                    if (tappedKey == 'a' and xCorPA > pSP):\n",
     "                        xCorPA -= 50\n",
     "                    if (tappedKey == 'd' and xCorPA < -50):\n",
     "                        xCorPA += 50\n",
@@ -154,9 +154,9 @@
     "            if (tappedKey == 'Up' or tappedKey == 'Down'): #Up & Down\n",
     "                yCorPB = paddleB.ycor()\n",
     "\n",
-    "                if (tappedKey == 'Up' and yCorPB < 250):\n",
+    "                if (tappedKey == 'Up' and yCorPB < (tB - 50)):\n",
     "                    yCorPB += 50\n",
-    "                if (tappedKey == 'Down' and yCorPB > -250):\n",
+    "                if (tappedKey == 'Down' and yCorPB > (bB + 50)):\n",
     "                    yCorPB -= 50\n",
     "\n",
     "                paddleB.sety(yCorPB)\n",
@@ -167,7 +167,7 @@
     "\n",
     "                    if (tappedKey == 'Left' and xCorPB > 50):\n",
     "                        xCorPB -= 50\n",
-    "                    if (tappedKey == 'Right' and xCorPB < 350):\n",
+    "                    if (tappedKey == 'Right' and xCorPB < pSP):\n",
     "                        xCorPB += 50\n",
     "\n",
     "                    paddleB.setx(xCorPB)"
@@ -182,31 +182,47 @@
     "#Called Movements by 'onkeypress'\n",
     "#Paddle A\n",
     "def paddleAUp():\n",
-    "    paddleMovement('w', pause, gameMode)\n",
+    "    paddleMovement(paddleAStartPosition, \n",
+    "                   'w', pause, gameMode, \n",
+    "                   topBorder, bottomBorder)\n",
     "    \n",
     "def paddleADown():\n",
-    "    paddleMovement('s', pause, gameMode)\n",
+    "    paddleMovement(paddleAStartPosition, \n",
+    "                   's', pause, gameMode, \n",
+    "                   topBorder, bottomBorder)\n",
     "    \n",
     "def paddleALeft():\n",
-    "    paddleMovement('a', pause, gameMode)\n",
+    "    paddleMovement(paddleAStartPosition, \n",
+    "                   'a', pause, gameMode, \n",
+    "                   topBorder, bottomBorder)\n",
     "    \n",
     "def paddleARight():\n",
     "    paddleBallMoveCollision(ball, paddleA, paddleB)\n",
-    "    paddleMovement('d', pause, gameMode)\n",
+    "    paddleMovement(paddleAStartPosition, \n",
+    "                   'd', pause, gameMode, \n",
+    "                   topBorder, bottomBorder)\n",
     "\n",
     "#Paddle B\n",
     "def paddleBUp():\n",
-    "    paddleMovement('Up', pause, gameMode)\n",
+    "    paddleMovement(paddleBStartPosition, \n",
+    "                   'Up', pause, gameMode, \n",
+    "                   topBorder, bottomBorder)\n",
     "    \n",
     "def paddleBDown():\n",
-    "    paddleMovement('Down', pause, gameMode)\n",
+    "    paddleMovement(paddleBStartPosition, \n",
+    "                   'Down', pause, gameMode, \n",
+    "                   topBorder, bottomBorder)\n",
     "    \n",
     "def paddleBLeft():\n",
     "    paddleBallMoveCollision(ball, paddleA, paddleB)\n",
-    "    paddleMovement('Left', pause, gameMode)\n",
+    "    paddleMovement(paddleBStartPosition, \n",
+    "                   'Left', pause, gameMode, \n",
+    "                   topBorder, bottomBorder)\n",
     "    \n",
     "def paddleBRight():\n",
-    "    paddleMovement('Right', pause, gameMode)"
+    "    paddleMovement(paddleBStartPosition, \n",
+    "                   'Right', pause, gameMode, \n",
+    "                   topBorder, bottomBorder)"
    ]
   },
   {
@@ -447,7 +463,7 @@
    "outputs": [],
    "source": [
     "#Screen Border Checking\n",
-    "def borderChecking(bl):\n",
+    "def borderChecking(bl, lB, rB, tB, bB):\n",
     "    global ballHit\n",
     "    global score1\n",
     "    global score2 \n",
@@ -455,23 +471,23 @@
     "    yCorBall = bl.ycor()\n",
     "    xCorBall = bl.xcor()\n",
     "    \n",
-    "    if (yCorBall > 290 or yCorBall < -290):\n",
-    "        if (yCorBall > 290): #Top Screen Border\n",
-    "            bl.sety(290)\n",
+    "    if (yCorBall > tB - 10 or yCorBall < bB + 10):\n",
+    "        if (yCorBall > tB - 10): #Top Screen Border\n",
+    "            bl.sety(tB - 10)\n",
     "\n",
-    "        if (yCorBall < -290): #Bottom Screen Border\n",
-    "            bl.sety(-290)\n",
+    "        if (yCorBall < bB + 10): #Bottom Screen Border\n",
+    "            bl.sety(bB + 10)\n",
     "        \n",
     "        bl.dy *= -1\n",
     "    \n",
-    "    if (xCorBall > 390 or xCorBall < -390):\n",
-    "        if (xCorBall > 390): #Right Screen Border\n",
-    "            bl.setx(390)\n",
+    "    if (xCorBall > rB or xCorBall < lB):\n",
+    "        if (xCorBall > rB): #Right Screen Border\n",
+    "            bl.setx(rB)\n",
     "            score1 += 1\n",
     "            setBallSpeed(-1 * defaultBallSpeed)\n",
     "\n",
-    "        if (xCorBall < -390): #Left Screen Border\n",
-    "            bl.setx(-390)\n",
+    "        if (xCorBall < lB): #Left Screen Border\n",
+    "            bl.setx(lB)\n",
     "            score2 += 1\n",
     "            setBallSpeed(defaultBallSpeed)\n",
     "        \n",
@@ -676,7 +692,7 @@
    "outputs": [],
    "source": [
     "#Accurately predict's the ball's path; currently only functions for classic mode\n",
-    "def predictBallMovement(bl):\n",
+    "def predictBallMovement(bl, lB, rB, tB, bB):\n",
     "    global ballScoreXCor\n",
     "    global ballScoreYCor\n",
     "    \n",
@@ -686,23 +702,23 @@
     "    dxBall = bl.dx\n",
     "    dyBall = bl.dy\n",
     "    \n",
-    "    xCorBaseline = 350\n",
-    "    yCorSideline = 290\n",
+    "    xCorBaseline = rB\n",
+    "    yCorSideline = tB - 10\n",
     "    \n",
     "    if (abs(xCorBall) < 5):\n",
     "        if (dxBall > 0):\n",
-    "            xCorBasline = 350\n",
+    "            xCorBasline = rB\n",
     "        elif (dxBall < 0):\n",
-    "            xCorBasline = -350\n",
+    "            xCorBasline = lB\n",
     "         \n",
     "        xDistToBaseline = xCorBaseline - xCorBall\n",
     "        xTimeToBaseline = abs(xDistToBaseline / dxBall)\n",
     "            \n",
     "        if (dyBall > 0):\n",
-    "            yCorSideline = 290\n",
+    "            yCorSideline = tB - 10\n",
     "        \n",
     "        elif (dyBall < 0):\n",
-    "            yCorSideline = -290\n",
+    "            yCorSideline = bB + 10\n",
     "        \n",
     "        yDistToSideline = yCorSideline - yCorBall\n",
     "        yTimeToSideline = abs(yDistToSideline / dyBall)\n",
@@ -713,7 +729,7 @@
     "        elif (xTimeToBaseline > yTimeToSideline):\n",
     "            xTimeToBaseline -= yTimeToSideline\n",
     "                \n",
-    "            yTimeToCrossHalfOfField = abs(290 / dyBall)\n",
+    "            yTimeToCrossHalfOfField = abs((tB - 10) / dyBall)\n",
     "            ratio = xTimeToBaseline / yTimeToCrossHalfOfField\n",
     "            wholeRatio = int(ratio)\n",
     "                \n",
@@ -724,10 +740,10 @@
     "            wholeRatiosAfterLastBounce = wholeRatio - (2 * (numBounces - 1))\n",
     "                \n",
     "            if ((numBounces % 2 > 0 and dyBall > 0) or (numBounces % 2 == 0 and dyBall < 0)):\n",
-    "                ballScoreYCor = 290 - (wholeRatiosAfterLastBounce * 290) - abs(timeLeft * dyBall)\n",
+    "                ballScoreYCor = (tB - 10) - (wholeRatiosAfterLastBounce * (tB - 10)) - abs(timeLeft * dyBall)\n",
     "                    \n",
     "            elif ((numBounces % 2 > 0 and dyBall < 0) or (numBounces % 2 == 0 and dyBall > 0)):\n",
-    "                ballScoreYCor = -290 + (wholeRatiosAfterLastBounce * 290) + abs(timeLeft * dyBall)"
+    "                ballScoreYCor = (bB + 10) + (wholeRatiosAfterLastBounce * (tB - 10)) + abs(timeLeft * dyBall)"
    ]
   },
   {
@@ -796,6 +812,7 @@
     "pause = False\n",
     "pauseMessage = genText(0, 'white', 0, 0, '', 'center', ('Courier', 24, 'normal'))\n",
     "\n",
+    "#Speed interval at which AI players are allowed to react\n",
     "baseAISpeed = 26\n",
     "speedSAI = baseAISpeed\n",
     "speedPAI = baseAISpeed\n",
@@ -845,6 +862,11 @@
    "source": [
     "#Sets up the game environment    \n",
     "\n",
+    "#Tenis Court Borders\n",
+    "leftBorder = -650\n",
+    "rightBorder = 650\n",
+    "topBorder = 300\n",
+    "bottomBorder = -300\n",
     "\n",
     "#Generates the Tenis Court\n",
     "court = genObject(0, 'square', 30, 65, 'blue', 0, 0)\n",
@@ -856,23 +878,26 @@
     "serviceLineWest = genObject(0, 'square', 22.5, 0.1, 'white', -350, 0)\n",
     "serviceLineEast = genObject(0, 'square', 22.5, 0.1, 'white', 350, 0) \n",
     "\n",
-    "baslineWest = genObject(0, 'square', 30, 0.1, 'white', -650, 0)\n",
-    "baslineEast = genObject(0, 'square', 30, 0.1, 'white', 650, 0)\n",
+    "baslineWest = genObject(0, 'square', 30, 0.1, 'white', rightBorder, 0)\n",
+    "baslineEast = genObject(0, 'square', 30, 0.1, 'white', leftBorder, 0)\n",
     "\n",
     "singleSidlineNorth = genObject(0, 'square', 0.1, 65, 'white', 0, 225)\n",
     "singleSidlineSouth = genObject(0, 'square', 0.1, 65, 'white', 0, -225)\n",
     "\n",
-    "doubleSidlineNorth = genObject(0, 'square', 0.1, 65, 'white', 0, 300)\n",
-    "doubleSidlineSouth = genObject(0, 'square', 0.1, 65, 'white', 0, -300)\n",
+    "doubleSidlineNorth = genObject(0, 'square', 0.1, 65, 'white', 0, topBorder)\n",
+    "doubleSidlineSouth = genObject(0, 'square', 0.1, 65, 'white', 0, bottomBorder)\n",
+    "\n",
     "\n",
     "#Generates the Paddles\n",
     "#Left Paddle A\n",
-    "paddleA = genObject(0, 'square', 5, 1, 'orange', -350, 0)\n",
+    "paddleAStartPosition = leftBorder + 50\n",
+    "paddleA = genObject(0, 'square', 5, 1, 'orange', paddleAStartPosition, 0)\n",
     "paddleAStrength = 1.0\n",
     "paddleAPowerSwingReady = 10\n",
     "\n",
     "#Right Paddle B\n",
-    "paddleB = genObject(0, 'square', 5, 1, 'orange', 350, 0)\n",
+    "paddleBStartPosition = rightBorder - 50\n",
+    "paddleB = genObject(0, 'square', 5, 1, 'orange', paddleBStartPosition, 0)\n",
     "paddleBStrength = 1.0\n",
     "paddleAPowerSwingReady = 10\n",
     "\n",
@@ -1008,8 +1033,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bring pause message forward.\n",
-      "Bring pause message forward.\n",
       "Bring pause message forward.\n"
      ]
     }
@@ -1021,7 +1044,7 @@
     "    if (pause == False):\n",
     "        playerControlsSwitch(numPlayers, gameMode)\n",
     "        moveBall(ball)\n",
-    "        borderChecking(ball)\n",
+    "        borderChecking(ball, leftBorder, rightBorder, topBorder, bottomBorder)\n",
     "        paddleBallCollision(ball, ballHit, paddleA, paddleAStrength, paddleB, paddleBStrength)\n",
     "\n",
     "        if (numPlayers < 2):\n",
@@ -1029,7 +1052,7 @@
     "                speedSAI = timer(baseAISpeed, speedSAI, simpleOpponentAI, \n",
     "                                 ball, ballHit, paddleB, paddleA, numPlayers, gameMode)    \n",
     "            else:\n",
-    "                predictBallMovement(ball)\n",
+    "                predictBallMovement(ball, leftBorder, rightBorder, topBorder, bottomBorder)\n",
     "                speedPAI = timer(baseAISpeed, speedPAI, predictiveOpponentAI, \n",
     "                                 ball, ballHit, paddleA, paddleB, numPlayers, gameMode)\n",
     "                    \n",
